Add shufflestring.c file

--- a/programus_codingtest/programus_codingtest.vcxproj
+++ b/programus_codingtest/programus_codingtest.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Lv0_08_loopstring.c" />
     <ClCompile Include="Lv0_09_evenorodd.c" />
     <ClCompile Include="Lv0_10_stringoverwrite.c" />
+    <ClCompile Include="Lv0_11_shufflestring.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
