--- a/programus_codingtest/programus_codingtest.vcxproj.filters
+++ b/programus_codingtest/programus_codingtest.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClCompile Include="Lv0_12_listToString.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Lv0_13_biggetplus.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
